--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "eafa8168-4538-49b7-8b4f-3e369956f153"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
